# docker-python-postgres

./: .gitignore  README.md  docker-compose.yml
app/: pyproject.toml
app/src/demo/: __main__.py  fib.py
app/src/demo/db/: setting.py
app/src/demo/db/models/: book.py  user.py
app/tests/: test_fib.py
docker/app/: Dockerfile
docker/db/: Dockerfile  postgresql.conf
docker/db/init/: init.sql
