[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "demo"
description = "Python and Postgres"
requires-python = "==3.11.*"
dependencies = [
    "python-dotenv",
    "psycopg2",
    "sqlalchemy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pyproject-flake8",
    "autopep8",
    "pytest",
    "pytest-mock",
    "pytest-cov"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.setuptools.dynamic]
version = {attr = "demo.version.version}

[tool.setuptools_scm]
write_to = "src/tte/version.py
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
