[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "demo"
description = "Python and Postgres"
requires-python = "==3.11.*"
dependencies = [
    "python-dotenv",
    "psycopg2",
    "sqlalchemy"
]
version = 0.0.1

[project.optional-dependencies]
dev = [
    "pyproject-flake8",
    "autopep8",
    "pytest",
    "pytest-mock",
    "pytest-cov"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
